[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://ChatContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://TopBar.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Main" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserList" type="ItemList" parent="Main"]
margin_right = 150.0
margin_bottom = 600.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3
allow_reselect = true

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
margin_left = 150.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main/VBoxContainer"]
margin_right = 874.0
margin_bottom = 300.0
size_flags_vertical = 3

[node name="TopBar" parent="Main/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]

[node name="MatchList" type="ItemList" parent="Main/VBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 874.0
margin_bottom = 300.0
size_flags_vertical = 3
allow_reselect = true

[node name="ChatLobby" parent="Main/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 300.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MatchmakeDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -41.0
margin_right = 126.0
margin_bottom = 40.0
popup_exclusive = true
window_title = "Matching you with other Players"
resizable = true
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lobby" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Lobby"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Lobby/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 300.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Start" type="Button" parent="Lobby/VBoxContainer/HBoxContainer"]
margin_right = 512.0
margin_bottom = 300.0
size_flags_horizontal = 3
disabled = true
text = "START"

[node name="Leave" type="Button" parent="Lobby/VBoxContainer/HBoxContainer"]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 300.0
size_flags_horizontal = 3
text = "LEAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Lobby/VBoxContainer"]
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="PlayerList" type="ItemList" parent="Lobby/VBoxContainer/HBoxContainer2"]
margin_right = 150.0
margin_bottom = 300.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatMatch" parent="Lobby/VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
margin_left = 150.0
margin_right = 1024.0
size_flags_horizontal = 3

[node name="Game" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Game"]
margin_left = 477.42
margin_top = 204.866
margin_right = 545.42
margin_bottom = 224.866
text = "TEST RPC"
[connection signal="on_Create_pressed" from="Main/VBoxContainer/VBoxContainer/TopBar" to="." method="_on_TopBar_on_Create_pressed"]
[connection signal="on_Join_pressed" from="Main/VBoxContainer/VBoxContainer/TopBar" to="." method="_on_TopBar_on_Join_pressed"]
[connection signal="on_Matchmake_pressed" from="Main/VBoxContainer/VBoxContainer/TopBar" to="." method="_on_TopBar_on_Matchmake_pressed"]
[connection signal="item_activated" from="Main/VBoxContainer/VBoxContainer/MatchList" to="." method="_on_MatchList_item_activated"]
[connection signal="message_sent" from="Main/VBoxContainer/ChatLobby" to="." method="_on_ChatLobby_message_sent"]
[connection signal="pressed" from="Lobby/VBoxContainer/HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Lobby/VBoxContainer/HBoxContainer/Leave" to="." method="_on_Leave_pressed"]
[connection signal="message_sent" from="Lobby/VBoxContainer/HBoxContainer2/ChatMatch" to="." method="_on_ChatMatch_message_sent"]
[connection signal="pressed" from="Game/Button" to="." method="_on_Button_pressed"]
